--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,5 @@ dependencyResolutionManagement {
     }
 }
 
-rootProject.name = "TrabalhoPDM"
-include(":app")
- 
+rootProject.name = "ContatosPdm"
+include ':app'
