Feat: Great commit, name of classes changed to be more cohesive with the activity. Developed logic for dividing the bill and added another room, dedicated to showing how much each person should pay and receive. The code was inspired by a code developed in class, "ContatosPDM"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ContatosPdm"
+        android:theme="@style/Theme.SplitTheBill"
         tools:targetApi="31">
         <activity
-            android:name=".view.ContactActivity"
+            android:name=".view.PersonActivity"
             android:exported="false" />
+        <activity
+            android:name=".view.SplitBillActivity"
+            android:exported="false"/>
         <activity
             android:name=".view.MainActivity"
             android:exported="true">
